--- a/index.html
+++ b/index.html
@@ -3,42 +3,138 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BMI Calculator</title>
+  <title>Slim Reset USA - Lose Weight Naturally</title>
   <style>
     body {
+      margin: 0;
       font-family: Arial, sans-serif;
-      background: #f0f4f8;
+      background: #f8f9fa;
+      color: #333;
+    }
+
+    header {
+      background: #28a745;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .hero {
+      background: url("https://images.unsplash.com/photo-1554284126-aa88f22d8b74?auto=format&fit=crop&w=1200&q=80") no-repeat center center/cover;
+      height: 80vh;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    .container {
-      background: white;
-      padding: 20px 30px;
-      border-radius: 12px;
-      box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
-      max-width: 400px;
       text-align: center;
-    }
-    h1 {
-      color: #333;
-      margin-bottom: 20px;
-    }
-    input {
-      width: 90%;
-      padding: 10px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 16px;
-    }
-    button {
-      background: #007bff;
       color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 8px;
-      f
+      padding: 20px;
+    }
 
+    .hero h1 {
+      font-size: 48px;
+      text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+    }
+
+    .hero p {
+      font-size: 20px;
+      margin: 20px 0;
+      max-width: 600px;
+    }
+
+    .hero a {
+      background: #ff4b2b;
+      color: white;
+      padding: 15px 30px;
+      text-decoration: none;
+      font-size: 20px;
+      border-radius: 8px;
+      transition: 0.3s;
+    }
+
+    .hero a:hover {
+      background: #e63900;
+    }
+
+    .benefits {
+      padding: 50px 20px;
+      text-align: center;
+      background: white;
+    }
+
+    .benefits h2 {
+      font-size: 32px;
+      margin-bottom: 30px;
+    }
+
+    .benefit-box {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+    }
+
+    .benefit {
+      background: #f1f1f1;
+      padding: 20px;
+      margin: 10px;
+      border-radius: 10px;
+      width: 250px;
+    }
+
+    .benefit h3 {
+      color: #28a745;
+    }
+
+    footer {
+      background: #222;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 30px;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    Slim Reset USA
+  </header>
+
+  <section class="hero">
+    <h1>Transform Your Body</h1>
+    <p>Discover the natural way to burn fat, boost energy, and reset your health with Slim Reset USA.</p>
+    <a href="https://ed8599n3itb-8vb6ma6bo68w3o.hop.clickbank.net" target="_blank">Get Started Now</a>
+  </section>
+
+  <section class="benefits">
+    <h2>Why Choose Slim Reset?</h2>
+    <div class="benefit-box">
+      <div class="benefit">
+        <h3>🔥 Burn Fat Naturally</h3>
+        <p>Support your metabolism and burn calories faster without crash diets.</p>
+      </div>
+      <div class="benefit">
+        <h3>💪 Boost Energy</h3>
+        <p>Feel more energetic and active throughout your day.</p>
+      </div>
+      <div class="benefit">
+        <h3>🌱 100% Natural</h3>
+        <p>Made with safe and natural ingredients you can trust.</p>
+      </div>
+      <div class="benefit">
+        <h3>✨ Visible Results</h3>
+        <p>See real results in just weeks with consistent use.</p>
+      </div>
+    </div>
+    <br>
+    <a href="https://ed8599n3itb-8vb6ma6bo68w3o.hop.clickbank.net" target="_blank" style="background:#ff4b2b; padding:15px 30px; color:white; text-decoration:none; border-radius:8px; font-size:18px;">Claim Your Offer</a>
+  </section>
+
+  <footer>
+    © 2025 Slim Reset USA | All Rights Reserved
+  </footer>
+
+</body>
+</html>
