--- a/index.html
+++ b/index.html
@@ -3,138 +3,135 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Slim Reset USA - Lose Weight Naturally</title>
+  <title>BMI Calculator</title>
   <style>
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f8f9fa;
-      color: #333;
-    }
-
-    header {
-      background: #28a745;
-      color: white;
-      padding: 20px;
-      text-align: center;
-      font-size: 28px;
-      font-weight: bold;
-    }
-
-    .hero {
-      background: url("https://images.unsplash.com/photo-1554284126-aa88f22d8b74?auto=format&fit=crop&w=1200&q=80") no-repeat center center/cover;
-      height: 80vh;
+      font-family: 'Arial', sans-serif;
+      background: url('https://images.unsplash.com/photo-1554284126-7d89e07b1e9b?auto=format&fit=crop&w=1350&q=80') no-repeat center center fixed;
+      background-size: cover;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
+      height: 100vh;
+    }
+    .calculator {
+      background: rgba(255, 255, 255, 0.95);
+      padding: 30px;
+      border-radius: 15px;
       text-align: center;
-      color: white;
-      padding: 20px;
+      width: 320px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
     }
-
-    .hero h1 {
-      font-size: 48px;
-      text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+    h2 {
+      color: #333;
+      margin-bottom: 20px;
     }
-
-    .hero p {
-      font-size: 20px;
-      margin: 20px 0;
-      max-width: 600px;
-    }
-
-    .hero a {
-      background: #ff4b2b;
-      color: white;
-      padding: 15px 30px;
-      text-decoration: none;
-      font-size: 20px;
-      border-radius: 8px;
-      transition: 0.3s;
-    }
-
-    .hero a:hover {
-      background: #e63900;
-    }
-
-    .benefits {
-      padding: 50px 20px;
-      text-align: center;
-      background: white;
-    }
-
-    .benefits h2 {
-      font-size: 32px;
-      margin-bottom: 30px;
-    }
-
-    .benefit-box {
-      display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-    }
-
-    .benefit {
-      background: #f1f1f1;
-      padding: 20px;
-      margin: 10px;
+    input[type="number"] {
+      width: 80%;
+      padding: 10px;
+      margin: 10px 0;
       border-radius: 10px;
-      width: 250px;
+      border: 1px solid #ccc;
+      font-size: 16px;
     }
-
-    .benefit h3 {
-      color: #28a745;
-    }
-
-    footer {
-      background: #222;
+    button {
+      padding: 12px 25px;
+      border: none;
+      border-radius: 10px;
+      background: #FF5722;
       color: white;
-      text-align: center;
-      padding: 15px;
-      margin-top: 30px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+    button:hover {
+      background: #E64A19;
+    }
+    .result {
+      margin-top: 20px;
+      font-size: 18px;
+      font-weight: bold;
+      color: #333;
+    }
+    .tip {
+      font-size: 14px;
+      color: #555;
+      margin-top: 5px;
+    }
+    .cta {
+      margin-top: 15px;
+      font-size: 14px;
+      color: #FF5722;
+      font-weight: bold;
+    }
+    .cb-button {
+      display: none; /* Initially hidden */
+      margin-top: 15px;
+      padding: 12px 20px;
+      background: #4CAF50;
+      color: white;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 10px;
+    }
+    .cb-button:hover {
+      background: #45a049;
     }
   </style>
 </head>
 <body>
-
-  <header>
-    Slim Reset USA
-  </header>
-
-  <section class="hero">
-    <h1>Transform Your Body</h1>
-    <p>Discover the natural way to burn fat, boost energy, and reset your health with Slim Reset USA.</p>
-    <a href="https://ed8599n3itb-8vb6ma6bo68w3o.hop.clickbank.net" target="_blank">Get Started Now</a>
-  </section>
-
-  <section class="benefits">
-    <h2>Why Choose Slim Reset?</h2>
-    <div class="benefit-box">
-      <div class="benefit">
-        <h3>🔥 Burn Fat Naturally</h3>
-        <p>Support your metabolism and burn calories faster without crash diets.</p>
-      </div>
-      <div class="benefit">
-        <h3>💪 Boost Energy</h3>
-        <p>Feel more energetic and active throughout your day.</p>
-      </div>
-      <div class="benefit">
-        <h3>🌱 100% Natural</h3>
-        <p>Made with safe and natural ingredients you can trust.</p>
-      </div>
-      <div class="benefit">
-        <h3>✨ Visible Results</h3>
-        <p>See real results in just weeks with consistent use.</p>
-      </div>
-    </div>
+  <div class="calculator">
+    <h2>BMI Calculator</h2>
+    <input type="number" id="weight" placeholder="Weight (kg)" required>
+    <input type="number" id="height" placeholder="Height (cm)" required>
     <br>
-    <a href="https://ed8599n3itb-8vb6ma6bo68w3o.hop.clickbank.net" target="_blank" style="background:#ff4b2b; padding:15px 30px; color:white; text-decoration:none; border-radius:8px; font-size:18px;">Claim Your Offer</a>
-  </section>
+    <button onclick="calculateBMI()">Check Your BMI</button>
+    <div class="result" id="result"></div>
+    <div class="tip" id="tip"></div>
+    <div class="cta">Click the button above & know your health instantly!</div>
+    <a href="https://ed8599n3itb-8vb6ma6bo68w3o.hop.clickbank.net" target="_blank" class="cb-button" id="cbButton">
+      Try This Fat Burning Solution
+    </a>
+  </div>
 
-  <footer>
-    © 2025 Slim Reset USA | All Rights Reserved
-  </footer>
+  <script>
+    function calculateBMI() {
+      let weight = document.getElementById('weight').value;
+      let height = document.getElementById('height').value;
 
+      if(weight === "" || height === "") {
+        alert("Please enter both weight and height");
+        return;
+      }
+
+      height = height / 100; // convert cm to meters
+      let bmi = weight / (height * height);
+      bmi = bmi.toFixed(1);
+
+      let category = "";
+      let tip = "";
+
+      if(bmi < 18.5) {
+        category = "Underweight";
+        tip = "Eat more nutritious food & maintain a healthy diet.";
+      } else if(bmi >= 18.5 && bmi < 24.9) {
+        category = "Normal";
+        tip = "Great! Keep maintaining your healthy lifestyle.";
+      } else if(bmi >= 25 && bmi < 29.9) {
+        category = "Overweight";
+        tip = "Exercise regularly & watch your diet.";
+      } else {
+        category = "Obese";
+        tip = "Consult a doctor & follow a healthy weight loss plan.";
+      }
+
+      document.getElementById('result').innerHTML = `Your BMI: ${bmi} (${category})`;
+      document.getElementById('tip').innerHTML = tip;
+
+      // Show ClickBank button after calculation
+      document.getElementById('cbButton').style.display = "inline-block";
+    }
+  </script>
 </body>
 </html>
+
