--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="XXXXXXXXXXXXXXXXXXXX" />
+
   <!-- Google AdSense Account -->
   <meta name="google-adsense-account" content="ca-pub-8365004292440012">
 
@@ -81,5 +84,3 @@
   </script>
 </body>
 </html>
-
-
